Weight painting after adding vertex group in armature modifier #66567

Closed
opened 2019-07-08 19:06:24 +02:00 by Anish · 8 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.71

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 12:40, hash: 27adc4aa33
Worked: (optional)

Short description of error
[I am using blenrig, and I have created a vertex group to weight paint hands, applied armature modifier and applied that vertex group on it but as I switch to weight painting blender crashes. I don't know if it is the addon problem or not though]

Exact steps for others to reproduce the error
Heres a screenshot
From here whenever I go to weight painting mode blender crashes
Screenshot (25).png

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.71 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 12:40, hash: `27adc4aa33` Worked: (optional) **Short description of error** [I am using blenrig, and I have created a vertex group to weight paint hands, applied armature modifier and applied that vertex group on it but as I switch to weight painting blender crashes. I don't know if it is the addon problem or not though] **Exact steps for others to reproduce the error** Heres a screenshot From here whenever I go to weight painting mode blender crashes ![Screenshot (25).png](https://archive.blender.org/developer/F7577291/Screenshot__25_.png)
Author

Added subscriber: @blackspark-4

Added subscriber: @blackspark-4
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Hi @blackspark-4

Could you provide us with an example file, so it will be easy for developers to reproduce this issue?

Hi @blackspark-4 Could you provide us with an example file, so it will be easy for developers to reproduce this issue?
Author

Here it is
stewart_08.blend

Here it is [stewart_08.blend](https://archive.blender.org/developer/F7577126/stewart_08.blend)

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555557c36023 in defvert_find_index (dvert=0x10, defgroup=0) at /home/zed/prog/blender/source/blender/blenkernel/intern/deform.c:667
667	    MDeformWeight *dw = dvert->dw;
(gdb) bt
- 0  0x0000555557c36023 in defvert_find_index (dvert=0x10, defgroup=0) at /home/zed/prog/blender/source/blender/blenkernel/intern/deform.c:667
- 1  0x0000555557c35f8a in defvert_find_weight (dvert=0x10, defgroup=0) at /home/zed/prog/blender/source/blender/blenkernel/intern/deform.c:634
#2  0x0000555557be74d7 in armature_vert_task (userdata=0x7fffffffbdf0, i=1, UNUSED_tls=0x7fffffffbb40)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/armature.c:1387
#3  0x0000555557f1ebe1 in parallel_range_func (pool=0x7fffc0ff6008, userdata_chunk=0x0, thread_id=0)
    at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:1079
- 4  0x0000555557f1de42 in BLI_task_pool_work_and_wait (pool=0x7fffc0ff6008) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:939
- 5  0x0000555557f1f1da in BLI_task_parallel_range (start=0, stop=6900, userdata=0x7fffffffbdf0, func=0x555557be7203 <armature_vert_task>,
    settings=0x7fffffffbd80) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:1206
#6  0x0000555557be84f6 in armature_deform_verts (armOb=0x7fffc6692208, target=0x7fffffffc2e0, mesh=0x7fffcb6ca708, vertexCos=0x7fffc0d95008,
    defMats=0x7fffc1200008, numVerts=6900, deformflag=5, prevCos=0x0, defgrp_name=0x7fffd5191cb8 "no_mdef", gps=0x0)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/armature.c:1631
#7  0x000055555879a059 in deformMatrices (md=0x7fffd5191c28, ctx=0x7fffffffbfe0, mesh=0x7fffcb6ca708, vertexCos=0x7fffc0d95008, defMats=0x7fffc1200008,
    numVerts=6900) at /home/zed/prog/blender/source/blender/modifiers/intern/MOD_armature.c:221
#8  0x0000555557e6501a in BKE_sculpt_get_first_deform_matrices (depsgraph=0x7fffc35f0588, scene=0x7fffc6228008, object=0x7fffc6685008,
    deformmats=0x7fffc8822b18, deformcos=0x7fffc8822b10) at /home/zed/prog/blender/source/blender/blenkernel/intern/crazyspace.c:395
#9  0x0000555557e65179 in BKE_crazyspace_build_sculpt (depsgraph=0x7fffc35f0588, scene=0x7fffc6228008, object=0x7fffc6685008, deformmats=0x7fffc8822b18,
    deformcos=0x7fffc8822b10) at /home/zed/prog/blender/source/blender/blenkernel/intern/crazyspace.c:431
#10 0x0000555557d16a66 in sculpt_update_object (depsgraph=0x7fffc35f0588, ob=0x7fffc6685008, me_eval=0x7fffd49e6508, need_pmap=false, need_mask=false)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/paint.c:1228
#11 0x0000555557d16e96 in BKE_sculpt_update_object_for_edit (depsgraph=0x7fffc35f0588, ob_orig=0x7fffc6685008, need_pmap=false, need_mask=false)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/paint.c:1323
#12 0x0000555558b403cb in vertex_paint_init_session (depsgraph=0x7fffc35f0588, scene=0x7fffc6228008, ob=0x7fffc6685008, object_mode=OB_MODE_WEIGHT_PAINT)
    at /home/zed/prog/blender/source/blender/editors/sculpt_paint/paint_vertex.c:1021
#13 0x0000555558b40b9b in ed_vwpaintmode_enter_generic (bmain=0x7fffc696ed08, depsgraph=0x7fffc35f0588, wm=0x7fffeb879248, scene=0x7fffc6228008,
    ob=0x7fffc6685008, mode_flag=OB_MODE_WEIGHT_PAINT) at /home/zed/prog/blender/source/blender/editors/sculpt_paint/paint_vertex.c:1162
#14 0x0000555558b40cb2 in ED_object_wpaintmode_enter_ex (bmain=0x7fffc696ed08, depsgraph=0x7fffc35f0588, wm=0x7fffeb879248, scene=0x7fffc6228008,
    ob=0x7fffc6685008) at /home/zed/prog/blender/source/blender/editors/sculpt_paint/paint_vertex.c:1186
#15 0x0000555558b410fe in wpaint_mode_toggle_exec (C=0x7fffeb891208, op=0x7fffc0eb8308)
    at /home/zed/prog/blender/source/blender/editors/sculpt_paint/paint_vertex.c:1304
#16 0x000055555822b257 in wm_operator_invoke (C=0x7fffeb891208, ot=0x7fffe65abc28, event=0x0, properties=0x0, reports=0x0, poll_only=false,
    use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1450
#17 0x000055555822b8f5 in wm_operator_call_internal (C=0x7fffeb891208, ot=0x7fffe65abc28, properties=0x0, reports=0x0, context=7, poll_only=false, event=0x0)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1651
#18 0x000055555822bb18 in WM_operator_name_call_ptr (C=0x7fffeb891208, ot=0x7fffe65abc28, context=7, properties=0x0)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1699
#19 0x0000555558ab06fe in ED_object_mode_toggle (C=0x7fffeb891208, mode=OB_MODE_WEIGHT_PAINT)
    at /home/zed/prog/blender/source/blender/editors/object/object_modes.c:182
#20 0x0000555558aa98ce in object_mode_set_exec (C=0x7fffeb891208, op=0x7fffc0eb8248)
    at /home/zed/prog/blender/source/blender/editors/object/object_edit.c:1380
#21 0x000055555822b257 in wm_operator_invoke (C=0x7fffeb891208, ot=0x7fffe6536de8, event=0x7fffe57fe208, properties=0x7fffffffd840, reports=0x0,
--Type <RET> for more, q to quit, c to continue without paging--c
    poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1450
- 22 0x000055555822b8f5 in wm_operator_call_internal (C=0x7fffeb891208, ot=0x7fffe6536de8, properties=0x7fffffffd840, reports=0x0, context=1, poll_only=false, event=0x7fffe57fe208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1651
- 23 0x000055555822bb18 in WM_operator_name_call_ptr (C=0x7fffeb891208, ot=0x7fffe6536de8, context=1, properties=0x7fffffffd840) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1699
- 24 0x000055555884cfc3 in ui_apply_but_funcs_after (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:827
- 25 0x0000555558865532 in ui_handler_region_menu (C=0x7fffeb891208, event=0x7fffc8be0488, UNUSED_userdata=0x7fffcf0ecd88) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10174
- 26 0x0000555558228e90 in wm_handler_ui_call (C=0x7fffeb891208, handler=0x7fffc8bdbce8, event=0x7fffc8be0488, always_pass=0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:623
- 27 0x000055555822e19d in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffc8be0488, handlers=0x7fffe6794498) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2699
- 28 0x000055555822ef72 in wm_handlers_do (C=0x7fffeb891208, event=0x7fffc8be0488, handlers=0x7fffe6794498) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2945
- 29 0x0000555558230112 in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3307
- 30 0x000055555822340d in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417
- 31 0x0000555557b7b4b9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555557c36023 in defvert_find_index (dvert=0x10, defgroup=0) at /home/zed/prog/blender/source/blender/blenkernel/intern/deform.c:667 667 MDeformWeight *dw = dvert->dw; (gdb) bt - 0 0x0000555557c36023 in defvert_find_index (dvert=0x10, defgroup=0) at /home/zed/prog/blender/source/blender/blenkernel/intern/deform.c:667 - 1 0x0000555557c35f8a in defvert_find_weight (dvert=0x10, defgroup=0) at /home/zed/prog/blender/source/blender/blenkernel/intern/deform.c:634 #2 0x0000555557be74d7 in armature_vert_task (userdata=0x7fffffffbdf0, i=1, UNUSED_tls=0x7fffffffbb40) at /home/zed/prog/blender/source/blender/blenkernel/intern/armature.c:1387 #3 0x0000555557f1ebe1 in parallel_range_func (pool=0x7fffc0ff6008, userdata_chunk=0x0, thread_id=0) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:1079 - 4 0x0000555557f1de42 in BLI_task_pool_work_and_wait (pool=0x7fffc0ff6008) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:939 - 5 0x0000555557f1f1da in BLI_task_parallel_range (start=0, stop=6900, userdata=0x7fffffffbdf0, func=0x555557be7203 <armature_vert_task>, settings=0x7fffffffbd80) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:1206 #6 0x0000555557be84f6 in armature_deform_verts (armOb=0x7fffc6692208, target=0x7fffffffc2e0, mesh=0x7fffcb6ca708, vertexCos=0x7fffc0d95008, defMats=0x7fffc1200008, numVerts=6900, deformflag=5, prevCos=0x0, defgrp_name=0x7fffd5191cb8 "no_mdef", gps=0x0) at /home/zed/prog/blender/source/blender/blenkernel/intern/armature.c:1631 #7 0x000055555879a059 in deformMatrices (md=0x7fffd5191c28, ctx=0x7fffffffbfe0, mesh=0x7fffcb6ca708, vertexCos=0x7fffc0d95008, defMats=0x7fffc1200008, numVerts=6900) at /home/zed/prog/blender/source/blender/modifiers/intern/MOD_armature.c:221 #8 0x0000555557e6501a in BKE_sculpt_get_first_deform_matrices (depsgraph=0x7fffc35f0588, scene=0x7fffc6228008, object=0x7fffc6685008, deformmats=0x7fffc8822b18, deformcos=0x7fffc8822b10) at /home/zed/prog/blender/source/blender/blenkernel/intern/crazyspace.c:395 #9 0x0000555557e65179 in BKE_crazyspace_build_sculpt (depsgraph=0x7fffc35f0588, scene=0x7fffc6228008, object=0x7fffc6685008, deformmats=0x7fffc8822b18, deformcos=0x7fffc8822b10) at /home/zed/prog/blender/source/blender/blenkernel/intern/crazyspace.c:431 #10 0x0000555557d16a66 in sculpt_update_object (depsgraph=0x7fffc35f0588, ob=0x7fffc6685008, me_eval=0x7fffd49e6508, need_pmap=false, need_mask=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/paint.c:1228 #11 0x0000555557d16e96 in BKE_sculpt_update_object_for_edit (depsgraph=0x7fffc35f0588, ob_orig=0x7fffc6685008, need_pmap=false, need_mask=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/paint.c:1323 #12 0x0000555558b403cb in vertex_paint_init_session (depsgraph=0x7fffc35f0588, scene=0x7fffc6228008, ob=0x7fffc6685008, object_mode=OB_MODE_WEIGHT_PAINT) at /home/zed/prog/blender/source/blender/editors/sculpt_paint/paint_vertex.c:1021 #13 0x0000555558b40b9b in ed_vwpaintmode_enter_generic (bmain=0x7fffc696ed08, depsgraph=0x7fffc35f0588, wm=0x7fffeb879248, scene=0x7fffc6228008, ob=0x7fffc6685008, mode_flag=OB_MODE_WEIGHT_PAINT) at /home/zed/prog/blender/source/blender/editors/sculpt_paint/paint_vertex.c:1162 #14 0x0000555558b40cb2 in ED_object_wpaintmode_enter_ex (bmain=0x7fffc696ed08, depsgraph=0x7fffc35f0588, wm=0x7fffeb879248, scene=0x7fffc6228008, ob=0x7fffc6685008) at /home/zed/prog/blender/source/blender/editors/sculpt_paint/paint_vertex.c:1186 #15 0x0000555558b410fe in wpaint_mode_toggle_exec (C=0x7fffeb891208, op=0x7fffc0eb8308) at /home/zed/prog/blender/source/blender/editors/sculpt_paint/paint_vertex.c:1304 #16 0x000055555822b257 in wm_operator_invoke (C=0x7fffeb891208, ot=0x7fffe65abc28, event=0x0, properties=0x0, reports=0x0, poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1450 #17 0x000055555822b8f5 in wm_operator_call_internal (C=0x7fffeb891208, ot=0x7fffe65abc28, properties=0x0, reports=0x0, context=7, poll_only=false, event=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1651 #18 0x000055555822bb18 in WM_operator_name_call_ptr (C=0x7fffeb891208, ot=0x7fffe65abc28, context=7, properties=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1699 #19 0x0000555558ab06fe in ED_object_mode_toggle (C=0x7fffeb891208, mode=OB_MODE_WEIGHT_PAINT) at /home/zed/prog/blender/source/blender/editors/object/object_modes.c:182 #20 0x0000555558aa98ce in object_mode_set_exec (C=0x7fffeb891208, op=0x7fffc0eb8248) at /home/zed/prog/blender/source/blender/editors/object/object_edit.c:1380 #21 0x000055555822b257 in wm_operator_invoke (C=0x7fffeb891208, ot=0x7fffe6536de8, event=0x7fffe57fe208, properties=0x7fffffffd840, reports=0x0, --Type <RET> for more, q to quit, c to continue without paging--c poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1450 - 22 0x000055555822b8f5 in wm_operator_call_internal (C=0x7fffeb891208, ot=0x7fffe6536de8, properties=0x7fffffffd840, reports=0x0, context=1, poll_only=false, event=0x7fffe57fe208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1651 - 23 0x000055555822bb18 in WM_operator_name_call_ptr (C=0x7fffeb891208, ot=0x7fffe6536de8, context=1, properties=0x7fffffffd840) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1699 - 24 0x000055555884cfc3 in ui_apply_but_funcs_after (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:827 - 25 0x0000555558865532 in ui_handler_region_menu (C=0x7fffeb891208, event=0x7fffc8be0488, UNUSED_userdata=0x7fffcf0ecd88) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10174 - 26 0x0000555558228e90 in wm_handler_ui_call (C=0x7fffeb891208, handler=0x7fffc8bdbce8, event=0x7fffc8be0488, always_pass=0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:623 - 27 0x000055555822e19d in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffc8be0488, handlers=0x7fffe6794498) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2699 - 28 0x000055555822ef72 in wm_handlers_do (C=0x7fffeb891208, event=0x7fffc8be0488, handlers=0x7fffe6794498) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2945 - 29 0x0000555558230112 in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3307 - 30 0x000055555822340d in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417 - 31 0x0000555557b7b4b9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500 ```
Brecht Van Lommel was assigned by Sebastian Parborg 2019-07-10 15:36:49 +02:00

This issue was referenced by 53c8fd5447

This issue was referenced by 53c8fd54477c43fff437a57276a1ac0e2b7c7dfd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66567
No description provided.